Test fix for scrollbar pushing elements

--- a/css/reset.css
+++ b/css/reset.css
@@ -64,6 +64,10 @@ h6 {
   width: 0 !important;
 }
 
-html {
+/* html {
   scrollbar-width: none;
-}
+} */
+
+/* html {
+  scrollbar-gutter: stable;
+} */
